--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    // MainActivity ve xml arasında senkronizasyon sağlamak için:
+    id 'kotlin-android-extensions'
 }
 
 android {
